--- a/ecommerce_shop/src/main/resources/application-local.properties
+++ b/ecommerce_shop/src/main/resources/application-local.properties
@@ -23,16 +23,15 @@ springdoc.swagger-ui.path=/v3/swagger-ui.html
 vox.transport.kafka.enabled=false
 vox.transport.kafka.test.enabled=true
 vox.transport.kafka.bootstrap-servers=localhost:9092
-vox.transport.kafka.group_id=vox-consumer-group
+vox.transport.kafka.group_id=consumer-group
 vox.transport.kafka.auto-offset-reset=earliest
-vox.transport.kafka.consumer-group=vox-consumer-group
+vox.transport.kafka.consumer-group=consumer-group
 vox.transport.kafka.security-protocol=SSL
-vox.transport.kafka.ssl.keystore-location=C:/Users/UT80UM/Projects/java/vox_local/ssl/voicelake-keystore.jks
-vox.transport.kafka.ssl.keystore-password=v@FEf7NgDthhQR8z7
-vox.transport.kafka.ssl.truststore-location=C:/Users/UT80UM/Projects/java/vox_local/ssl/voicelake-truststore.jks
-vox.transport.kafka.ssl.truststore-password=R@h593xzCbcZyESwQ
 
-kafka.group-id=vox-group
+# PROMOTION
+promotion.level=100
+
+kafka.group-id=group
 
 kafka.topics[0].name=topic1
 kafka.topics[0].enabled=false
