--- a/ecommerce_shop/src/main/resources/application.properties
+++ b/ecommerce_shop/src/main/resources/application.properties
@@ -32,6 +32,9 @@ vox.transport.kafka.auto-offset-reset=earliest
 vox.transport.kafka.consumer-group=consumer-group
 vox.transport.kafka.security-protocol=SSL
 
+# PROMOTION
+promotion.level=100
+
 kafka.group-id=group
 
 kafka.topics[0].name=topic1
