--- a/ecommerce_shop/src/main/resources/application.properties
+++ b/ecommerce_shop/src/main/resources/application.properties
@@ -32,6 +32,9 @@ vox.transport.kafka.auto-offset-reset=earliest
 vox.transport.kafka.consumer-group=consumer-group
 vox.transport.kafka.security-protocol=SSL
 
+# EXCHANGE URL
+exchanges.url=http://api.nbp.pl/api/exchangerates/tables/A
+
 # PROMOTION
 promotion.level=100
 
